tdf#118567 Signature Line: Fix ooxml signing

Change-Id: Ie2467db7ab209f10e92b6db1f5680e7a9be614ab
Reviewed-on: https://gerrit.libreoffice.org/60676
Reviewed-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>
Tested-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>
(cherry picked from commit c3de0478fbcbe1dc22ab5dea42b423bb8e45fcba)