xmlsecurity/source/helper/documentsignaturehelper.cxx
@@ -548,7 +548,7 @@ void DocumentSignatureHelper::writeDigestMethod(
 void DocumentSignatureHelper::writeSignedProperties(
     const uno::Reference<xml::sax::XDocumentHandler>& xDocumentHandler,
     const SignatureInformation& signatureInfo,
-    const OUString& sDate)
+    const OUString& sDate, const bool bWriteSignatureLineData)
 {
     {
         rtl::Reference<SvXMLAttributeList> pAttributeList(new SvXMLAttributeList());
@@ -587,8 +587,8 @@ void DocumentSignatureHelper::writeSignedProperties(
     xDocumentHandler->endElement("xd:SignaturePolicyImplied");
     xDocumentHandler->endElement("xd:SignaturePolicyIdentifier");
 
-    if (!signatureInfo.ouSignatureLineId.isEmpty() && signatureInfo.aValidSignatureImage.is()
-        && signatureInfo.aInvalidSignatureImage.is())
+    if (bWriteSignatureLineData && !signatureInfo.ouSignatureLineId.isEmpty()
+        && signatureInfo.aValidSignatureImage.is() && signatureInfo.aInvalidSignatureImage.is())
     {
         rtl::Reference<SvXMLAttributeList> pAttributeList(new SvXMLAttributeList());
         pAttributeList->AddAttribute(
@@ -607,7 +607,7 @@ void DocumentSignatureHelper::writeSignedProperties(
         }
 
         {
-            // Write SignatureLineId element
+            // Write SignatureLineValidImage element
             xDocumentHandler->startElement(
                 "loext:SignatureLineValidImage",
                 Reference<XAttributeList>(new SvXMLAttributeList()));
@@ -622,7 +622,7 @@ void DocumentSignatureHelper::writeSignedProperties(
         }
 
         {
-            // Write SignatureLineId element
+            // Write SignatureLineInvalidImage element
             xDocumentHandler->startElement(
                 "loext:SignatureLineInvalidImage",
                 Reference<XAttributeList>(new SvXMLAttributeList()));
